add mocha tests and requirejs for the client

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Monaco Standup Page</title>
+  <meta name="description" content="The Monaco team standup page">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <link rel="stylesheet" href="stylesheets/style.css">
+  <script data-main="scripts/main" src="scripts/require.js"></script>
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
-  
   Hello World
 </body>
 </html>
