--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="The Monaco team standup page">
 
   <link rel="stylesheet" href="stylesheets/style.css">
-  <script data-main="scripts/main" src="scripts/require.js"></script>
+  <script data-main="scripts/main" src="scripts/lib/require.js"></script>
 </head>
 
 <body>
